2016-12-13  SilverNexus
	* CMakeLists.txt: Refactor to use the built-in build configurations.
	  This should fix Windows builds, too.
	* result_list.c: Add an assertion to the result list addition.

2016-12-06  SilverNexus
	* search.c: Make parse_file be static.
	* result_list.c: Reduce string copy operations by making each result item
	  hold a list of found locations.
	* result_list.h: Add definitions for the new result location structure.
	* output.c: Handle output of new format of results.

2016-11-25  SilverNexus
	* CMakeLists.txt: Fix a target being referenced before it is defined.
	  Compact the project and version definitions into one command.
	  Fix minimum version to correctly handle current implementation.

2016-11-22  SilverNexus
	* search.c: Factor out code to search for excluded directories.
	  Refactor conditional compilation of inline qualifiers to be MSVC-specific.
	  Make exclusion check functions static in addition to inline.
	* CMakeLists.txt: Add define for MSVC compilation.
	* dir_list.h: Add const qualifier for strings stored in DIR_LIST structure.
	* dir_list.c: Add const qualifier to function creating a DIR_LIST node.
	* fileperuser_search.c: Fix use of goto in fileperuser search functions.

2016-11-21  SilverNexus
	* search.c: Refactor io.h-based directory traversal to handle the way findfirst/next function.

2016-11-20  SilverNexus
	* CMakeLists.txt: Add condition where we add fileperuser to the system path in Windows.
	  Add compiler flags to set up compilation on MSVC compilers.
	  Add check for errno.h
	* config.h.in: Add define for errno.h presence.
	* add_to_system_path.bat: Add script to append fileperuser's path to the system path.
	* README: Update to reflect new implementation using io.h.
	* search.c: Refactor the path exclusion check to be an inline function instead of a macro substitution.
	  Move check for settings.base_search_path_length to before the traversal begins.