@@ -1,3 +1,7 @@
+2016-12-22  SilverNexus
+	* CMakeLists.txt: Fix syntax error in Windows build.
+	* result_list.c: Make inline compilation occur only when not using MSVC.
+
 2016-12-13  SilverNexus
 	* CMakeLists.txt: Refactor to use the built-in build configurations.
 	  This should fix Windows builds, too.
